force-app/main/default/objects/Opportunity/fields/auara_BillingCity__c.field-meta.xml
<CustomField>
    <fullName>auara_BillingCity__c</fullName>
    <label>Billing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>