force-app/main/default/objects/Opportunity/fields/auara_BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>auara_BillingCountry__c</fullName>
    <label>Billing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>