force-app/main/default/objects/Opportunity/fields/auara_BillingStateProvince__c.field-meta.xml
<CustomField>
    <fullName>auara_BillingStateProvince__c</fullName>
    <label>Billing State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>