force-app/main/default/objects/Opportunity/fields/auara_BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>auara_BillingStreet__c</fullName>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>