force-app/main/default/objects/Opportunity/fields/auara_BillingZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>auara_BillingZipPostalCode__c</fullName>
    <label>Billing Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>