force-app/main/default/objects/Opportunity/fields/auara_Facturable__c.field-meta.xml
<CustomField>
    <fullName>auara_Facturable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturable</label>
    <type>Checkbox</type>
</CustomField>