force-app/main/default/objects/Opportunity/fields/auara_id__c.field-meta.xml
<CustomField>
    <fullName>auara_id__c</fullName>
    <externalId>true</externalId>
    <label>Auara Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>