force-app/main/default/objects/Opportunity/fields/auara_LastActivity__c.field-meta.xml
<CustomField>
    <fullName>auara_LastActivity__c</fullName>
    <description>The date when a User last did something related to the record (represents one of the following):
  - The latest Due Date of the Closed Tasks on a record. 
  - The latest Start Date of Events on a record.

Example: If a Record has multiple Activities, the &quot;Last Activity&quot; date will be the Due Date of the Activity furthest in the future. If the Activity Due Dates are 1/10/2018 and 2/10/2018, the Last Activity will be 2/10/2018.</description>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity</label>
    <type>Date</type>
</CustomField>