force-app/main/default/objects/Opportunity/recordTypes/auara_Especial.recordType-meta.xml
<RecordType>
    <fullName>auara_Especial</fullName>
    <active>true</active>
    <businessProcess>Especial</businessProcess>
    <label>Especial</label>
</RecordType>