force-app/main/default/objects/Opportunity/recordTypes/auara_Estandar.recordType-meta.xml
<RecordType>
    <fullName>auara_Estandar</fullName>
    <active>true</active>
    <businessProcess>Estandar</businessProcess>
    <label>Estándar</label>
</RecordType>