force-app/main/default/objects/Opportunity/validationRules/VR_Esperando_Aprobacion.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Esperando_Aprobacion</fullName>
    <active>true</active>
    <description>Valida que el campo Amount de la oportunidad esté relleno (se hayan añadido productos) para poder pasar a este estado</description>
    <errorConditionFormula>AND(ISBLANK(Amount), ISPICKVAL(StageName,&apos;Esperando Aprobación&apos;))</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>Debe haberse fijado un precio en la oportunidad para poder enviarla a aprobación</errorMessage>
</ValidationRule>