force-app/main/default/objects/Opportunity/validationRules/VR_Propuesta_de_valor.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Propuesta_de_valor</fullName>
    <active>true</active>
    <description>Validation rule para poder cambiar de Cualificación a Propuesta de Valor</description>
    <errorConditionFormula>ISBLANK(ContactId) &amp;&amp;  ISPICKVAL(StageName, &quot;Propuesta de valor&quot;)</errorConditionFormula>
    <errorMessage>Debe haber al menos un contacto con rol &quot;Responsable de la decisión&quot; para poder cambiar de etapa la oportunidad.</errorMessage>
</ValidationRule>